@@ -1,3 +1,9 @@
+2008-06-02  Scott James Remnant  <scott@netsplit.com>
+
+	* init/tests/test_control.c (test_bus_close): Don't rely on being
+	able to connect to the various buses, instead use a special private
+	one.
+
 2008-06-01  Scott James Remnant  <scott@netsplit.com>
 
 	* dbus/com.ubuntu.Upstart.Job.xml (GetAllInstances): And also add
